bindings.rs

// #![allow(non_upper_case_globals)]
// #![allow(non_camel_case_types)]
// #![allow(non_snake_case)]
// #![allow(unused)]
//
// include!(concat!(env!("OUT_DIR"), "/bindings.rs"));

/* automatically generated by rust-bindgen 0.72.0 */

pub const __bool_true_false_are_defined: u32 = 1;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
pub const _VCRT_COMPILER_PREPROCESSOR: u32 = 1;
pub const _SAL_VERSION: u32 = 20;
pub const __SAL_H_VERSION: u32 = 180000000;
pub const _USE_DECLSPECS_FOR_SAL: u32 = 0;
pub const _USE_ATTRIBUTES_FOR_SAL: u32 = 0;
pub const _CRT_PACKING: u32 = 8;
pub const _HAS_EXCEPTIONS: u32 = 1;
pub const _STL_LANG: u32 = 0;
pub const _HAS_CXX17: u32 = 0;
pub const _HAS_CXX20: u32 = 0;
pub const _HAS_CXX23: u32 = 0;
pub const _HAS_CXX26: u32 = 0;
pub const _HAS_NODISCARD: u32 = 0;
pub const WCHAR_MIN: u32 = 0;
pub const WCHAR_MAX: u32 = 65535;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 65535;
pub type va_list = *mut ::std::os::raw::c_char;
unsafe extern "C" {
  pub fn __va_start(arg1: *mut *mut ::std::os::raw::c_char, ...);
}
pub type __vcrt_bool = bool;
pub type wchar_t = ::std::os::raw::c_ushort;
unsafe extern "C" {
  pub fn __security_init_cookie();
}
unsafe extern "C" {
  pub fn __security_check_cookie(_StackCookie: usize);
}
unsafe extern "C" {
  pub fn __report_gsfailure(_StackCookie: usize) -> !;
}
unsafe extern "C" {
  pub static mut __security_cookie: usize;
}
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
pub type max_align_t = f64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fasttext_args_t {
  _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fasttext_t {
  _unused: [u8; 0],
}
unsafe extern "C" {
  pub fn fasttext_args_new() -> *mut fasttext_args_t;
}
unsafe extern "C" {
  pub fn fasttext_args_delete(args: *mut fasttext_args_t);
}
unsafe extern "C" {
  pub fn fasttext_args_parse(
    args: *mut fasttext_args_t,
    argc: ::std::os::raw::c_int,
    argv: *mut *mut ::std::os::raw::c_char,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_input(args: *mut fasttext_args_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
  pub fn fasttext_args_set_input(
    args: *mut fasttext_args_t,
    input: *const ::std::os::raw::c_char,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_output(args: *mut fasttext_args_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
  pub fn fasttext_args_set_output(
    args: *mut fasttext_args_t,
    output: *const ::std::os::raw::c_char,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_lr(args: *mut fasttext_args_t) -> f64;
}
unsafe extern "C" {
  pub fn fasttext_args_set_lr(args: *mut fasttext_args_t, lr: f64);
}
unsafe extern "C" {
  pub fn fasttext_args_get_lr_update_rate(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_lr_update_rate(
    args: *mut fasttext_args_t,
    rate: ::std::os::raw::c_int,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_dim(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_dim(args: *mut fasttext_args_t, dim: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_ws(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_ws(args: *mut fasttext_args_t, ws: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_epoch(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_epoch(args: *mut fasttext_args_t, epoch: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_min_count(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_min_count(
    args: *mut fasttext_args_t,
    min_count: ::std::os::raw::c_int,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_min_count_label(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_min_count_label(
    args: *mut fasttext_args_t,
    min_count_label: ::std::os::raw::c_int,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_neg(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_neg(args: *mut fasttext_args_t, neg: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_word_ngrams(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_word_ngrams(
    args: *mut fasttext_args_t,
    word_ngrams: ::std::os::raw::c_int,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_loss(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_loss(args: *mut fasttext_args_t, loss: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_model(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_model(args: *mut fasttext_args_t, model: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_bucket(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_bucket(args: *mut fasttext_args_t, bucket: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_minn(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_minn(args: *mut fasttext_args_t, minn: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_maxn(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_maxn(args: *mut fasttext_args_t, maxn: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_thread(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_thread(args: *mut fasttext_args_t, thread: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_t(args: *mut fasttext_args_t) -> f64;
}
unsafe extern "C" {
  pub fn fasttext_args_set_t(args: *mut fasttext_args_t, t: f64);
}
unsafe extern "C" {
  pub fn fasttext_args_get_label(args: *mut fasttext_args_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
  pub fn fasttext_args_set_label(
    args: *mut fasttext_args_t,
    label: *const ::std::os::raw::c_char,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_verbose(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_verbose(args: *mut fasttext_args_t, verbose: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_pretrained_vectors(
    args: *mut fasttext_args_t,
  ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
  pub fn fasttext_args_set_pretrained_vectors(
    args: *mut fasttext_args_t,
    pretrained_vectors: *const ::std::os::raw::c_char,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_save_output(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_save_output(
    args: *mut fasttext_args_t,
    save_output: ::std::os::raw::c_int,
  );
}
unsafe extern "C" {
  pub fn fasttext_args_get_qout(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_qout(args: *mut fasttext_args_t, qout: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_retrain(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_retrain(args: *mut fasttext_args_t, retrain: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_qnorm(args: *mut fasttext_args_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_args_set_qnorm(args: *mut fasttext_args_t, qnorm: ::std::os::raw::c_int);
}
unsafe extern "C" {
  pub fn fasttext_args_get_cutoff(args: *mut fasttext_args_t) -> usize;
}
unsafe extern "C" {
  pub fn fasttext_args_set_cutoff(args: *mut fasttext_args_t, cutoff: usize);
}
unsafe extern "C" {
  pub fn fasttext_args_get_dsub(args: *mut fasttext_args_t) -> usize;
}
unsafe extern "C" {
  pub fn fasttext_args_set_dsub(args: *mut fasttext_args_t, dsub: usize);
}
unsafe extern "C" {
  pub fn fasttext_new() -> *mut fasttext_t;
}
unsafe extern "C" {
  pub fn fasttext_delete(ft: *mut fasttext_t);
}
unsafe extern "C" {
  pub fn fasttext_load_model(ft: *mut fasttext_t, path: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
  pub fn fasttext_load_model_from_buffer(
    ft: *mut fasttext_t,
    data: *const ::std::os::raw::c_void,
    size: usize,
  );
}
unsafe extern "C" {
  pub fn fasttext_save_model(ft: *mut fasttext_t, path: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
  pub fn fasttext_get_dimension(ft: *mut fasttext_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
  pub fn fasttext_get_word_vector(
    ft: *mut fasttext_t,
    word: *const ::std::os::raw::c_char,
    vec: *mut f32,
  );
}
unsafe extern "C" {
  pub fn fasttext_get_sentence_vector(
    ft: *mut fasttext_t,
    text: *const ::std::os::raw::c_char,
    vec: *mut f32,
  );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fasttext_prediction_t {
  pub probability: f32,
  pub label: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  // ["Size of fasttext_prediction_t"][::std::mem::size_of::<fasttext_prediction_t>() - 16usize];
  // ["Alignment of fasttext_prediction_t"]
  //   [::std::mem::align_of::<fasttext_prediction_t>() - 8usize];
  ["Offset of field: fasttext_prediction_t::probability"]
    [::std::mem::offset_of!(fasttext_prediction_t, probability) - 0usize];
  // ["Offset of field: fasttext_prediction_t::label"]
  //   [::std::mem::offset_of!(fasttext_prediction_t, label) - 8usize];
};
unsafe extern "C" {
  pub fn fasttext_predict(
    ft: *mut fasttext_t,
    text: *const ::std::os::raw::c_char,
    k: i32,
    threshold: f32,
    n_predictions: *mut ::std::os::raw::c_int,
  ) -> *mut fasttext_prediction_t;
}
unsafe extern "C" {
  pub fn fasttext_free_predictions(
    predictions: *mut fasttext_prediction_t,
    n_predictions: ::std::os::raw::c_int,
  );
}
unsafe extern "C" {
  pub fn fasttext_train(
    input: *const ::std::os::raw::c_char,
    output: *const ::std::os::raw::c_char,
    model_name: *const ::std::os::raw::c_char,
    retrain: bool,
    qout: bool,
    thread: ::std::os::raw::c_int,
  );
}
